--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.4.9
   get_it: ^7.6.4
-  intl: ^0.19.0
+  intl: 
 
 dev_dependencies:
   flutter_test:
