--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: jintent
 description: "is a Flutter package that provides an architecture for managing state changes in your application using the concept of intents. This architecture promotes a structured and modular approach to handling specific actions or events, allowing for a clean separation of concerns."
-version: 0.0.1
+version: 0.0.3
 homepage: https://todoflutter.com/packages/jintent
 environment:
-  sdk: '>=3.2.1 <4.0.0'
+  sdk: ">=3.2.1 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.4.9
-  get_it: ^7.6.4
-  intl: 
+  get_it: ">=6.0.0"
+  intl:
+  flutter_state_notifier: ^1.0.0
 
 dev_dependencies:
   flutter_test:
