--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,12 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   get_it: ">=6.0.0"
   intl:
-  flutter_state_notifier: ^1.0.0
+  state_notifier: ^1.0.0
 
 dev_dependencies:
   flutter_test:
