--- a/example/counter/pubspec.yaml
+++ b/example/counter/pubspec.yaml
@@ -32,16 +32,19 @@ dependencies:
     sdk: flutter
   jintent:
     path: ../..
+  get_it: ^7.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
+  sn_progress_dialog: ^1.1.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
