--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,15 @@
 name: jintent
-description: "https://github.com/GenSoftMX/JIntent"
-version: 1.0.0+3
+description: "jintent is a Flutter package that provides an architecture for managing state changes in your application using the concept of intents."
+version: 1.0.1
 homepage: https://github.com/GenSoftMX/JIntent
 environment:
-  sdk: ">=3.2.1 <4.0.0"
+  sdk: ^3.7.2
   flutter: ">=1.17.0"
 
 dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  get_it: ^7.7.0
   state_notifier: ^1.0.0
 
 dev_dependencies:
